create and implement ToysController

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 .vs/
+/EndpointImplementationProject/Controllers/UsersController.cs
